--- a/.github/workflows/build-mac-linux-windows.yml
+++ b/.github/workflows/build-mac-linux-windows.yml
@@ -37,7 +37,8 @@ jobs:
       # Install dependencies
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r requirements.txt 
+          apt install fuse3 && apt install libfuse3-dev
 
       # Build python script into a stand-alone exe
       - uses: jimkring/python-script-to-exe@v0.2.0
