--- a/.github/workflows/build-mac-linux-windows.yml
+++ b/.github/workflows/build-mac-linux-windows.yml
@@ -43,7 +43,8 @@ jobs:
         if: startsWith(matrix.os,'ubuntu')
         run: |
           sudo apt-get update
-          sudo apt-get install fuse3 && sudo apt-get install libfuse3-dev
+          sudo apt-get install -y libfuse2
+           
 
       # Build python script into a stand-alone exe
       - uses: jimkring/python-script-to-exe@v0.2.0
